# PortfolioInvesting

./: .gitignore  README.md  algorithm.py  asset_selection.py  backend.py  bb_test.py  config.py  config_logger.py  constraints.py  data_op.py  demo_test.py  download_data.py  evaluate.py  fitness.py  gui.py  help.txt  index.py  main.py  main_tab.py  mate.py  module.py  mutate.py  portfolio.py  portfolio_optimization.py  pyproject.toml  requirements.txt  select_.py  sp500.py  stock_selection.py  tab_as.py  tab_po.py  test_run.py  ticker.py  time_test.py  yfs.py
Data/: sp500tickers.csv
Data/Backup/: A.xlsx  AAL.xlsx  AAP.xlsx  AAPL.xlsx  ABBV.xlsx  ABC.xlsx  ABMD.xlsx  ABT.xlsx  ACGL.xlsx  ACN.xlsx  ADBE.xlsx  ADI.xlsx  ADM.xlsx  ADP.xlsx  ADSK.xlsx  AEE.xlsx  AEP.xlsx  AES.xlsx  AFL.xlsx  AIG.xlsx  AIZ.xlsx  AJG.xlsx  AKAM.xlsx  ALB.xlsx  ALGN.xlsx  ALK.xlsx  ALL.xlsx  ALLE.xlsx  AMAT.xlsx  AMCR.xlsx  AMD.xlsx  AME.xlsx  AMGN.xlsx  AMP.xlsx  AMT.xlsx  AMZN.xlsx  ANET.xlsx  ANSS.xlsx  AON.xlsx  AOS.xlsx  (+462 more)
Data/DAX40/: DAX40.csv
Data/DAX40/Historical/: 1COV.DE.csv  ADS.DE.csv  AIR.DE.csv  ALV.DE.csv  BAS.DE.csv  (+35 more)
Data/Historical Data/: A.xlsx  AAL.xlsx  AAP.xlsx  AAPL.xlsx  ABBV.xlsx  ABC.xlsx  ABT.xlsx  ACGL.xlsx  ACN.xlsx  ACS.xlsx  ADBE.xlsx  ADI.xlsx  ADM.xlsx  ADP.xlsx  ADSK.xlsx  AEE.xlsx  AEP.xlsx  AES.xlsx  AET.xlsx  AFL.xlsx  AIG.xlsx  AIZ.xlsx  AJG.xlsx  AKAM.xlsx  ALB.xlsx  ALGN.xlsx  ALK.xlsx  ALL.xlsx  ALLE.xlsx  AMAT.xlsx  AMCR.xlsx  AMD.xlsx  AME.xlsx  AMGN.xlsx  AMP.xlsx  AMT.xlsx  AMZN.xlsx  ANET.xlsx  ANF.xlsx  ANSS.xlsx  (+468 more)
Data/SP500/: .gitignore
