[project]
name = "portfolioinvesting"
version = "0.1.0"
description = "Framework for portfolio optimization"
authors = [
    {name = "ress99",email = "mressurreicao99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.11.2",
    "cachetools==5.3.2",
    "deap==1.3.3",
    "matplotlib==3.7.2",
    "memory-profiler==0.61.0",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "plotly==5.13.1",
    "pympler==1.1",
    "python-dateutil==2.8.2",
    "requests==2.32.3",
    "yfinance==0.2.61"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
